force-app/main/default/objects/Repair__c/Repair__c.object-meta.xml
<CustomObject>
    <label>Repair</label>
    <nameField>
        <displayFormat>RPN-{00000}</displayFormat>
        <label>Repair Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repairs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>