force-app/main/default/objects/Repair__c/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <label>Coverage</label>
    <referenceTo>Coverage__c</referenceTo>
    <relationshipLabel>Repairs</relationshipLabel>
    <relationshipName>Repairs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>